packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-007.ttrp
// expect: TTRP-SQL-007
container c target erp_pg """sql
SELECT sum(x) OVER () FROM t
"""
